--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My Resume</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
           <div class="about-me-container">
             <div class="row h-100">
               <div class="col-6 about-me-image-container h-100 d-flex justify-content-center align-items-center">
-                 <img src="GOPR0455.jpg" class="about-me-image">
+                 <img src="./GOPR0455.jpg" class="about-me-image">
               </div>
                 <div class="col-6 text-center about-me-text" >
                   I like to travel
@@ -50,11 +50,11 @@
               </ul>
             </div>
             <div class="col-12 d-flex justify-content-center align-items-center">
-                <img src="G0290537.JPG" class="achievements-image">
-                <img src="G0290537.JPG" class="achievements-image">
-                <img src="G0290537.JPG" class="achievements-image">
-                <img src="G0290537.JPG" class="achievements-image">
-                <img src="G0290537.JPG" class="achievements-image">
+                <img src="./G0290537.JPG" class="achievements-image">
+                <img src="./G0290537.JPG" class="achievements-image">
+                <img src="./G0290537.JPG" class="achievements-image">
+                <img src="./G0290537.JPG" class="achievements-image">
+                <img src="./G0290537.JPG" class="achievements-image">
             </div>
           </div>
           </div>
