--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="d-flex justify-content-center">
               <a href="https://www.linkedin.com/in/jie-yang-siah-479618a8/">
-              <img src="download.png" class="contact-me-icon">
+              <img src="./download.png" class="contact-me-icon">
               </a>
             </div>
           </div>
