--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="about-me-container">
             <div class="row h-100">
               <div class="col-6 about-me-image-container h-100 d-flex justify-content-center align-items-center">
-                 <img src="./G0290537.JPG" class="about-me-image">
+                 <img src="./helpme.jpg" class="about-me-image">
               </div>
                 <div class="col-6 text-center about-me-text" >
                   I like to travel
